--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> JSTinker</a>
+            <a class="navbar-brand" href="#"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> FLI Homeschool Tinker!</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,6 +65,18 @@
                 </div>
                 <div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
                     <div class="panel-body">
+                        <div class="dropdown">
+                            <div class="btn-group">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="exampleMenu" data-toggle="dropdown" aria-expanded="true">
+                                Exercises
+                            <span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu scrollable-menu" id="exampleMenu" role="menu" aria-labelledby="exampleMenu">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="">Lightbulb</a></li>
+                            </ul>
+                            </div>
+                        </div>
+                        <br>
                         <div class="dropdown">
                             <div class="btn-group">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
