update to allow js alerts and confirms

--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
             <div class="editorContainer">
                 <p class="lead">Preview</p>
                 <iframe class="editor" id="preview" name="result"
-                    sandbox="allow-forms allow-popups allow-scripts allow-same-origin" frameborder="0">
+                    sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin" frameborder="0">
                     #document
                 </iframe>
             </div>
