adds new exercises

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 </li>
                 <li id="btnTidyUp"><a href=""><span class="glyphicon glyphicon-flash" aria-hidden="true"></span>
                         TidyUp</a></li>
+                <li id="topDisplay"><a href="#"><span class="glyphicon glyphicon-eye" aria-hidden="true"></span>
+                            Toggle Top</a></li>
                 <li id="btnTogether"><a href=""><span class="glyphicon glyphicon-star-empty" aria-hidden="true"></span>
                         Collaborate</a></li>
                 <li id="btnSave"><a href=""><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
@@ -59,7 +61,8 @@
                 <li id="btnLoad"><a href=""><span class="glyphicon glyphicon-open" aria-hidden="true"></span>Load</a>
                 </li>
             </ul>
-        </div><!-- /.navbar-collapse -->
+        </div>
+        <!-- /.navbar-collapse -->
     </nav>
 
     <!-- Sidebar -->
@@ -69,8 +72,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingOne">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true"
-                            aria-controls="collapseOne">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             Exercises & Extensions
                         </a>
                     </h4>
@@ -79,27 +81,25 @@
                     <div class="panel-body">
                         <div class="dropdown">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="exampleMenu"
-                                    data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="exampleMenu" data-toggle="dropdown" aria-expanded="true">
                                     Exercises
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="exampleMenu" role="menu"
-                                    aria-labelledby="exampleMenu">
+                                <ul class="dropdown-menu scrollable-menu" id="exampleMenu" role="menu" aria-labelledby="exampleMenu">
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">Lightbulb</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="">Lightbulb BOOM</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="">Room Lights BOOM</a></li>
                                 </ul>
                             </div>
                         </div>
                         <br>
                         <div class="dropdown">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1"
-                                    data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true">
                                     No-Library (pure JS)
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu1" role="menu"
-                                    aria-labelledby="dropdownMenu1">
+                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu1" role="menu" aria-labelledby="dropdownMenu1">
                                     <li role="presentation" class="dropdown-header">jQuery</li>
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">jQuery Compat
                                             (edge)</a></li>
@@ -394,19 +394,15 @@
                         <br>
                         <div class="dropdown">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2"
-                                    data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-expanded="true">
                                     onLoad
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu2" role="menu"
-                                    aria-labelledby="dropdownMenu2">
+                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu2" role="menu" aria-labelledby="dropdownMenu2">
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">onLoad</a></li>
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">onDomReady</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="">No wrap - in
-                                            head</a></li>
-                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="">No wrap - in
-                                            body</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="">No wrap - in head</a></li>
+                                    <li role="presentation"><a role="menuitem" tabindex="-1" href="">No wrap - in body</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -417,8 +413,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingTwo">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true"
-                            aria-controls="collapseTwo">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
                             Tinker Options
                         </a>
                     </h4>
@@ -437,13 +432,11 @@
                         <p>DTD</p>
                         <div class="dropdown">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3"
-                                    data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-expanded="true">
                                     HTML 5
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu3" role="menu"
-                                    aria-labelledby="dropdownMenu3">
+                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu3" role="menu" aria-labelledby="dropdownMenu3">
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">XHTML 1.0
                                             Strict</a></li>
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">XHTML 1.0
@@ -467,8 +460,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingThree">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true"
-                            aria-controls="collapseThree">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="true" aria-controls="collapseThree">
                             External Resources
                         </a>
                     </h4>
@@ -486,8 +478,7 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingFour">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true"
-                            aria-controls="collapseFour">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="true" aria-controls="collapseFour">
                             Languages
                         </a>
                     </h4>
@@ -496,26 +487,22 @@
                     <div class="panel-body">
                         <div class="dropdown langcontainer">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle langbutton" type="button"
-                                    id="dropdownMenu4" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle langbutton" type="button" id="dropdownMenu4" data-toggle="dropdown" aria-expanded="true">
                                     HTML
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu4" role="menu"
-                                    aria-labelledby="dropdownMenu4">
+                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu4" role="menu" aria-labelledby="dropdownMenu4">
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">HTML</a></li>
                                 </ul>
                             </div>
                         </div>
                         <div class="dropdown langcontainer langright">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle langbutton" type="button"
-                                    id="dropdownMenu5" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle langbutton" type="button" id="dropdownMenu5" data-toggle="dropdown" aria-expanded="true">
                                     CSS
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu5" role="menu"
-                                    aria-labelledby="dropdownMenu5">
+                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu5" role="menu" aria-labelledby="dropdownMenu5">
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">CSS</a></li>
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">SCSS</a></li>
                                 </ul>
@@ -523,13 +510,11 @@
                         </div>
                         <div class="dropdown langcontainer">
                             <div class="btn-group">
-                                <button class="btn btn-default dropdown-toggle langbutton" type="button"
-                                    id="dropdownMenu6" data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default dropdown-toggle langbutton" type="button" id="dropdownMenu6" data-toggle="dropdown" aria-expanded="true">
                                     JavaScript
                                     <span class="caret"></span>
                                 </button>
-                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu6" role="menu"
-                                    aria-labelledby="dropdownMenu6">
+                                <ul class="dropdown-menu scrollable-menu" id="dropdownMenu6" role="menu" aria-labelledby="dropdownMenu6">
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">JavaScript</a></li>
                                     <li role="presentation"><a role="menuitem" tabindex="-1" href="">CoffeeScript</a>
                                     </li>
@@ -540,8 +525,7 @@
                         </div>
                         <div class="dropdown langcontainer langright">
                             <div class="btn-group">
-                                <button class="btn btn-default langbutton" type="button" id="dropdownMenu7"
-                                    data-toggle="dropdown" aria-expanded="true">
+                                <button class="btn btn-default langbutton" type="button" id="dropdownMenu7" data-toggle="dropdown" aria-expanded="true">
                                     Results
                                 </button>
                             </div>
@@ -568,24 +552,20 @@
             <div class="panel panel-default">
                 <div class="panel-heading" role="tab" id="headingSix">
                     <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true"
-                            aria-controls="collapseSix">
+                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="true" aria-controls="collapseSix">
                             Legal, Credits and Links
                         </a>
                     </h4>
                 </div>
                 <div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
                     <div class="panel-body">
-                        <p>Created and maintained by <a title="John's homepage"
-                                href="http://johncipponeri.github.io/">John Cipponeri</a>.</p>
+                        <p>Created and maintained by <a title="John's homepage" href="http://johncipponeri.github.io/">John Cipponeri</a>.</p>
                         <p>CSS Design by <a title="Gianni's Twitter" href="https://twitter.com/Hazulu">@Hazulu</a></p>
                         <p>Hosted by <a href="https://pages.github.com/">GitHub Pages</a>.</p>
-                        <p>Special thanks to <a href="http://jsfiddle.net" target="_new">JSFiddle</a> as this is an open
-                            source clone of it.</p>
+                        <p>Special thanks to <a href="http://jsfiddle.net" target="_new">JSFiddle</a> as this is an open source clone of it.</p>
                         <p><strong>License</strong></p>
                         <p>All code belongs to the poster and no license is enforced.</p>
-                        <p>JSTinker or its author are not responsible or liable for any loss or damage of any kind
-                            during the usage of provided code.</p>
+                        <p>JSTinker or its author are not responsible or liable for any loss or damage of any kind during the usage of provided code.</p>
                         <p><strong>Links</strong></p>
                         For updates please follow my
                         <a href="http://twitter.com/johncipponeri/" target="_new">tweets</a>
@@ -593,7 +573,8 @@
                 </div>
             </div>
         </div>
-    </div><!-- /sidebar -->
+    </div>
+    <!-- /sidebar -->
 
     <div class="editors">
         <div class="top">
@@ -616,9 +597,8 @@
             </div>
             <!-- Preview -->
             <div class="editorContainer">
-                <p class="lead">Preview</p>
-                <iframe class="editor" id="preview" name="result"
-                    sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin" frameborder="0">
+                <p class="lead runPreview">Preview</p>
+                <iframe class="editor" id="preview" name="result" sandbox="allow-modals allow-forms allow-popups allow-scripts allow-same-origin" frameborder="0">
                     #document
                 </iframe>
             </div>
